# Rose

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FINAL.md  DEVELOPMENT.md  Dockerfile  FIXES_SUMMARY.md  FRONTEND_FIX.md  FRONT_END_TRANSFORMATION_SUMMARY.md  MEMORY_SYSTEM_SMOKE_TEST_RESULTS.md  Makefile  QA_TEST_RESULTS.md  QA_VOICE_INTERFACE_TEST_PLAN.md  QUICK_START_GUIDE.md  README.md  START_ROSE.md  TESTING_COMPLETE.md  coverage.json  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  railway.json  run_memory_smoke_test.py  run_tests.bat  test_rose_workflow.py  verify_qdrant.py
.claude/: settings.local.json
.github/: BRANCH_PROTECTION_SETUP.md  BRANCH_SETUP_STATUS.md  CODEOWNERS  PUSH_PROTECTION_BYPASS.md  README.md  codecov.yml
config/: README.md  dev.env  prod.env  railway-prod.json  railway-staging.json  railway.json  staging.env
docker/: Dockerfile.backend.dev  Dockerfile.frontend.dev  README.md
docs/: API_DESIGN_VERIFICATION.md  API_DOCUMENTATION.md  API_ENHANCEMENTS_SUMMARY.md  API_QUICK_REFERENCE.md  API_VERIFICATION_CHECKLIST.md  ARCHITECTURE.md  ASYNC_PATTERN_AUDIT.md  ASYNC_PATTERN_FIXES_SUMMARY.md  BASELINE_METRICS.md  CIRCUIT_BREAKERS.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_PIPELINE.md  CI_CD_SETUP.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_QUALITY_REPORT.md  CODE_QUALITY_TASK_12_SUMMARY.md  COMPREHENSIVE_TEST_REPORT.md  DATA_PERSISTENCE.md  DEPENDENCY_ANALYSIS.md  DEPENDENCY_FINDINGS.md  DEPENDENCY_REFACTORING_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CONFIGURATION.md  DEPLOYMENT_CONFIG_SUMMARY.md  DEPLOYMENT_PLAN.md  DEVELOPER_GUIDE.md  DOCKER_FIXES.md  ERROR_HANDLER_USAGE_GUIDE.md  ERROR_HANDLING_AND_OBSERVABILITY.md  EXTERNAL_API_LIMITS.md  FEATURE_FLAGS.md  GETTING_STARTED.md  HORIZONTAL_SCALING_STRATEGY.md  INCIDENT_RESPONSE_PLAN.md  MEMORY_SYSTEM.md  MONITORING_AND_ALERTING.md  MONITORING_AND_OBSERVABILITY.md  MONITORING_QUICK_START.md  OPERATIONAL_DOCUMENTATION_INDEX.md  (+23 more)
frontend/: .env.production  AUDIO_VISUAL_SYNC_DIAGRAM.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  KEYBOARD_SHORTCUTS_QUICK_REFERENCE.md  PRODUCTION_BUILD_TESTING.md  README.md  RESPONSIVE_DESIGN_IMPLEMENTATION.md  RESPONSIVE_VERIFICATION_CHECKLIST.md  TASK_10_LIGHTING_SYSTEM_SUMMARY.md  TASK_11_POST_PROCESSING_SUMMARY.md  TASK_12_UI_COMPONENTS_SUMMARY.md  TASK_13_ANIMATION_SYSTEM_SUMMARY.md  TASK_15_AUDIO_VISUAL_SYNC_SUMMARY.md  TASK_16_COMPLETION.md  TASK_18_PERFORMANCE_OPTIMIZATION_SUMMARY.md  TASK_20_ERROR_HANDLING_SUMMARY.md  TASK_20_WEBGL_FALLBACK_SUMMARY.md  TASK_22_3_AUDIO_OPTIMIZATION.md  TASK_22_4_ENVIRONMENTAL_DETAILS.md  TASK_3_WATER_SURFACE_SUMMARY.md  TASK_6_IGLOO_SUMMARY.md  TASK_9_PARTICLE_SYSTEM_SUMMARY.md  TESTING.md  USER_ACCEPTANCE_TESTING_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.ts  test-production-build.cjs  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
notebooks/: character_card.ipynb  router.ipynb
scripts/: README.md  analyze_dependencies.py  build_and_serve.py  deploy_rose_clean.py  deploy_rose_ultimate.py  diagnose_deployment.py  e2e_test_voice.py  fix-secret.sh  fix_deployment_issues.py  profile_performance.py  quick_start.py  restart_dev_clean.py  run_dev_server.py  run_tests.sh  test_voice_api.py  utils.py  verify_deployment.py  verify_observability.py
tests/: COVERAGE_REPORT.md  INTEGRATION_E2E_TESTING.md  README.md  TESTING_GUIDE.md  TESTING_INFRASTRUCTURE.md  TESTING_SUMMARY.md  TEST_INFRASTRUCTURE.md  VOICE_FIRST_E2E_TESTING_SUMMARY.md  __init__.py  conftest.py  e2e_test_results.md  locustfile.py  manual_e2e_voice_first_testing.md  pytest.ini  run_integration_tests.bat  run_integration_tests.sh  test_circuit_breaker.py  test_core.py  test_data_persistence.py  test_deployment.py  test_e2e_playwright.py  test_frontend_automated.py  test_frontend_manual.md  test_integration.py  test_memory_smoke_10x5min.py  test_memory_therapeutic.py  test_monitoring.py  test_performance.py  test_performance_benchmarks.py  test_post_deployment_smoke.py  test_resource_management.py  test_rose_character.py  test_security.py  test_smoke.py  test_voice_first_consistency.py  (+1 more)
(+330 files in other folders)
