[project]
name = "ai-companion"
version = "0.1.0"
description = "Rose the Healer Shaman - AI grief counselor and holistic healing companion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.1.0,<24.0.0",
    "elevenlabs==1.50.3",
    "fastapi[standard]==0.115.6",
    "groq==0.13.1",
    "langchain-community==0.3.13",
    "langchain-groq==0.2.2",
    "langchain==0.3.13",
    "pydantic==2.10.0",
    "langgraph==0.2.60",
    "langchain-openai==0.2.14",
    "pydantic-settings==2.7.0",
    "pre-commit==4.0.1",
    "langgraph-checkpoint-duckdb==2.0.1",
    "duckdb==1.1.3",
    "langgraph-checkpoint-sqlite==2.0.1",
    "aiosqlite==0.20.0",
    "qdrant-client==1.12.1",
    "sentence-transformers==3.3.1",
    "python-multipart==0.0.9",
    "apscheduler==3.10.4",
    "slowapi==0.1.9",
    "structlog==24.1.0",
    "psutil==6.1.0",
    "sentry-sdk[fastapi]==2.19.2",
]

[project.optional-dependencies]
# Testing dependencies
test = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.0",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
    "locust==2.20.0",
    "mypy==1.13.0",
]
# Browser automation testing (optional)
playwright = [
    "playwright==1.40.0",
    "pytest-playwright==0.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
# E: pycodestyle errors
# F: pyflakes
# W: pycodestyle warnings
# Q: flake8-quotes
# I: isort
# ASYNC: flake8-async (async/await pattern checks)
select = ["E", "F", "W", "Q", "I", "ASYNC"]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
check_untyped_defs = true
strict_equality = false
show_error_codes = true
show_column_numbers = true
pretty = true
# Allow some flexibility for gradual typing
disallow_incomplete_defs = true
disallow_untyped_calls = false

# Exclude patterns
exclude = [
    "^tests/",
    "^notebooks/",
    "^scripts/",
    "^\\.venv/",
    "^build/",
    "^dist/",
]

# Per-module options for third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "elevenlabs.*",
    "groq.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_groq.*",
    "langchain_community.*",
    "langchain_openai.*",
    "langgraph.*",
    "qdrant_client.*",
    "sentence_transformers.*",
    "apscheduler.*",
    "slowapi.*",
    "structlog.*",
    "sentry_sdk.*",
    "aiofiles.*",
    "psutil.*",
]
ignore_missing_imports = true
